[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/textures/pixar-ball.png" type="Texture" id=1]
[ext_resource path="res://assets/models/pixar-ball.obj" type="ArrayMesh" id=2]
[ext_resource path="res://player/Ball.gd" type="Script" id=3]
[ext_resource path="res://a.wav" type="AudioStream" id=5]

[sub_resource type="PhysicsMaterial" id=3]
friction = 4.0
rough = true
bounce = 0.5

[sub_resource type="SphereShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 1 )
roughness = 0.4

[node name="Ball" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mass = 100.0
physics_material_override = SubResource( 3 )
angular_damp = 1.0
script = ExtResource( 3 )

[node name="CameraRig" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.38419e-07, 0 )

[node name="Camera" type="Camera" parent="CameraRig"]
transform = Transform( 1, 0, 0, 0, 0.928693, 0.370849, 0, -0.370849, 0.928693, 0, 2.85, 5.84309 )
current = true

[node name="target" type="Spatial" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Model" type="MeshInstance" parent="."]
material_override = SubResource( 2 )
mesh = ExtResource( 2 )

[node name="FloorCheck" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="CameraBase" type="Spatial" parent="."]
